testdata/golden/sema/valid/module_multitest/scripts/beta.fmt
pragma module; // scripts/beta.sg -> beta should be imported as scripts

pub fn beta() -> string {
    return "beta";
}
