testdata/golden/sema/invalid/module_no_std_mixed/a.fmt
pragma module;

pub fn a() -> int {
    return helper();
}
